# licitpy

./: .coveragerc  .gitignore  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: publish.yml  release.yml  test.yml
examples/: L1_awarded_IV_this_month_with_purchase_orders.py  L1_awarded_tenders.py  L1_awarded_this_month.py  L1_published_IV_this_month.py  L1_published_IV_this_month_with_attachments.py  L1_this_months_with_items.py  L1_today_IV.py  L1_unsuccessful_custom_dates.py  LP_this_month_published_with_signed_based.py  daily_tenders.py  get_by_code.py  purchase_order_by_code.py  purchase_order_from_this_month.py  tender_by_code.py  tender_questions.py  tenders_by_status.py
examples/cl/: get_by_code.py
examples/eu/: download_bulk_files.py
notebooks/: tender_by_code.ipynb
src/licitpy/: __init__.py  licitpy.py  settings.py
src/licitpy/client/: licitpy.py  purchase_orders.py  tenders.py
src/licitpy/core/: enums.py  exceptions.py  http.py  query.py
src/licitpy/downloader/: base.py  purchase_order.py  tender.py
src/licitpy/entities/: award.py  tender.py  (+3 more)
tests/: test_client_licitpy.py  test_downloader_base.py  test_downloader_tender.py  test_entities_purchase_order.py  test_entities_purchase_orders.py  test_entities_tender.py  test_entities_tenders.py  test_parsers_base.py  test_parsers_purchase_order.py  test_parsers_tender.py  test_source_api.py  test_source_local.py  test_sources_api.py  test_sources_base.py  test_sources_local.py  test_types_attachments.py  test_utils_date.py  test_utils_decorators.py  test_utils_threads.py
tests/integration/: test_parsers.py  test_url.py
tests/unit/: test_client_licitpy.py  test_downloader_tender.py  test_entities_purchase_orders.py  test_entities_tender.py  test_entities_tenders.py  test_parsers_attachment.py  test_parsers_award.py  test_parsers_base.py  test_parsers_purchase_order.py  test_parsers_tender.py  test_sources_base.py  test_sources_local.py  test_types_attachments.py  test_utils_amounts.py  test_utils_date.py  test_utils_validators.py
(+48 files in other folders)
