[tool.poetry]
name = "licitpy"
version = "0.2.4"
description = "LicitPy: A Python toolbox designed for downloading, parsing, and analyzing public tenders from Chile's Mercado Público."
authors = ["Nelson Guamán Leiva <nelguaman@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/nguaman/licitpy"
packages = [{ include = "licitpy", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"
lxml = "^5.3.0"
tenacity = "^9.0.0"
requests = "^2.32.3"
python-magic = "^0.4.27"
python-dateutil = "^2.9.0.post0"
pandas = "^2.2.3"
tqdm = "^4.67.0"
requests-cache = "^1.2.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
pre-commit = "^4.0.1"
python-semantic-release = "^9.13.0"
commitizen = "^3.30.1"
freezegun = "^1.5.1"
mypy = "^1.13.0"
types-tqdm = "^4.67.0.20241119"
types-python-dateutil = "^2.9.0.20241003"
pandas-stubs = "^2.2.3.241009"
types-lxml = "^2024.11.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.semantic_release]
version_variable = [
    "src/licitpy/__init__.py:__version__",
    "pyproject.toml:tool.poetry.version",
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "poetry build"
commit_version_number = true

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.feature]
match = "feat/.*"
prerelease = true
prerelease_token = "alpha"

[tool.pytest.ini_options]
addopts = "--cov=licitpy --cov-config=.coveragerc --cov-report=term-missing --cov-fail-under=80"

[tool.mypy]
plugins = ['pydantic.mypy']

python_version = "3.11"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
